--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "exercise-7-react-ts",
+  "homepage": "http://jurajrc.github.io/exercise-7-react-ts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/gh-pages": "^3.2.0",
     "@types/styled-components": "^5.1.19"
   }
 }
