--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "exercise-7-react-ts",
-  "homepage": "http://jurajrc.github.io/exercise-7-react-ts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,9 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
